--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,6 @@
 {
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
+  "image": "mcr.microsoft.com/devcontainers/base:alpine",
   "features": {
-    "ghcr.io/devcontainers/features/nix:1": {
-      "multiUser": true,
-      "version": "latest",
-      "extraNixConfig": "experimental-features = nix-command flakes,keep-outputs = true,keep-derivations = true"
-    }
+    "ghcr.io/devcontainers/features/nix": {}
   }
 }
