--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,7 @@
 FROM  archlinux:latest
 
 # Install dependencies
-RUN	 pacman -Syyu --noconfirm sudo openssh bash-completion vim git rust zig helix podman
+RUN	 pacman -Syyu --noconfirm sudo openssh bash-completion vim git rust zig helix podman rust-analyzer
 RUN  pacman -S --noconfirm cargo
 
 # Generate host keys
